2005-10-24  Alexis Sukrieh  <sukria@sukria.net>

	* backup-manager.conf.tpl:
	  + better comments for the pipe array.
	* lib/backup-methods.sh:
	  + "mysql" method now uses the pipe mechanism.

2005-10-23  Alexis Sukrieh  <sukria@sukria.net>

	* backup-manager.conf.tpl: 
	  + added examples about the backup method "pipe".
	* lib/actions.sh: 
	  + The backup switch now call backup_method_pipe() if needed.
	  + "tarball" method is not the default one anymore, must be called
	  explicitly.
	  + No default method anymore, trigger an error if unknown method
	  given.
	* lib/backup-methods.sh:
	  + new method: "pipe". Generic method which can make archives from
	  any commandline (the command should produce output on stdout).

2005-10-14  Alexis Sukrieh <sukria@sukria.net>

	* lib/backup-methods.sh: renamed a variable for gettext specific
	needs (s/error/nb_err).
	* lib/md5sum.sh: Fix a typo in a message.
	* po/.ext: removed, non needs to be archived.
	* po/fr.po: New version of the French translations.

2005-10-05  Alexis Sukrieh <sukria@backup-manager.org>

	* AUTHORS: fixed the name of "jimmy".
	* Makefile: man pages are generated and isntalled in the good section.
	* backup-manager.conf.tpl: Several typos.

0.5.9 Alexis Sukrieh <sukria@backup-manager.org>
	* Configuration keys have been drastically renamed.
	* Added a contrib script for upgrading the configuration files
	  to the new format: upgrade-conffile.sh
	* Upgraded the validation process, so deprecated variables trigger warnings
	  and are used as default values for the right name.
	* Better control of the tar commands, when an error occured, user is warned,
	  and a temp logfile is given.
	* Huge code cleanup for providing a modular implementation for several archive 
	  methods.
	* New archive method : mysql 
	  + uses mysqldump on a list of given databases.
	  + facility to choose a compression format for the resulting SQL file.
	* TODO backup method rsync
	* TODO backup method pipe
