@@ -1,3 +1,12 @@
+2005-10-24  Alexis Sukrieh <sukria@sukria.net>
+
+	* backup-manager:
+	  + added $svnadmin in the paths.
+	* lib/actions.sh:
+	  + The backup methdo switch now handles "svn" method.
+	* lib/backup-methods.sh:
+	  + backup_method_svn() implemeted using the pipe method mechanism.
+
 2005-10-24  Alexis Sukrieh  <sukria@sukria.net>
 
 	* backup-manager.conf.tpl:
